--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-      "components/jquery" : "3.3.1"
+      "components/jquery" : "3.3.1",
+    "twbs/bootstrap": "^4.2"
   }
 
 }
