natsort for types

--- a/app/configs/db.ini
+++ b/app/configs/db.ini
@@ -1,5 +1,5 @@
 [database]
 db_host     = 'localhost'
-db_name     = 'currency'
+db_name     = 'test_currency'
 db_user     = 'root'
 db_password = ''
